--- a/courses.html
+++ b/courses.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Courses - ArtNest</title>
+  <title>Courses - Bhubanananda Art School</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
